sonarqube-helm/templates/deployment-sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: "sonarqube:lts"
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: "/opt/sonarqube/data"
              name: sonarqube-storage
      volumes:
        - name: sonarqube-storage
          persistentVolumeClaim:
            claimName: sonarqube-pvc
